--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "swiper": "^9.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
