--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
     "focus-trap-react": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-geocode": "^0.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
