--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,5 @@
   "devDependencies": {
     "redux-logger": "^3.0.6"
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000/"
 }
