--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "parkly",
   "version": "1.0.0",
   "description": "Parkly is an online platform that allows people to rent out their parking spots.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend-install": "npm install --prefix backend",
+    "backend": "npm run dev --prefix backend",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "frontend-build": "npm run build --prefix frontend",
+    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build"
   },
   "repository": {
     "type": "git",
