--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6"
-  },
-  "proxy": "http://localhost:8000/"
+    "redux-logger": "^3.0.6",
+    "proxy": "http://localhost:8000/"
+  }
 }
