Change package.json on root directory

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parkly",
+  "name": "Parkly",
   "version": "1.0.0",
   "description": "Parkly is an online platform that allows people to rent out their parking spots.",
   "scripts": {
