--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
-    "aws-sdk": "^2.1329.0",
+    "aws-sdk": "^2.1327.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-validator": "^6.15.0",
+    "g": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "morgan": "~1.9.1",
@@ -24,8 +25,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "aws-sdk": "^2.1327.0",
-    "multer": "^1.4.5-lts.1"
+    "prettier": "^2.8.4"
   },
   "devDependencies": {
     "dotenv-cli": "^7.0.0",
