--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.3.1",
     "focus-trap-react": "^10.1.0",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
