--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "dotenv nodemon ./bin/www --inspect"
   },
   "dependencies": {
+    "@aws-sdk/lib-storage": "^3.428.0",
     "@faker-js/faker": "^7.6.0",
     "aws-sdk": "^2.1327.0",
     "bcryptjs": "^2.4.3",
